[package]
name = "example"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[dependencies]
ipp-sys = { version = "0.4", features = [ "2021" ], path = "../ipp-sys" }

[features]
2017=["ipp-sys/2017"]
2018=["ipp-sys/2018"]
2019=["ipp-sys/2019"]
2021=["ipp-sys/2021"]
